@@ -1,4 +1,5 @@
-Synchronisation of categories from server to client is now possible
+Fixed bug in synchronization of categories from server to client where sometimes the type of the parent node wasn't correct when searching for a certain node in the tree
+Synchronization of categories from server to client is now possible
 Fixed a bug in the resizer where it was possible for the lower line to go to far, under the picture
 Fixed a bug when going through the tree and find a node. Before, the parent node itself was never checked for the given criteria
 Using recursion, it now is possible for each category to have infinite subcategories and albums
